updated: mathematical-cryptography.tex, z-RSA.tex

--- a/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
+++ b/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
@@ -23,6 +23,7 @@
 
 \newcommand{\qed}{\hfill $\Box$}
 \newcommand{\proof}{\noindent {\small P{\scriptsize ROOF}} \quad}
+\newcommand{\F}{\mathbb{F}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
 \renewcommand{\Re}{\mathbb{R}}
