updated: mathematical-cryptography.tex

--- a/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
+++ b/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
@@ -104,10 +104,10 @@
 
 			%%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
-\newpage
-\small
-\appendix
-\input{z-Gibbs-inequality.tex}
+%\newpage
+%\small
+%\appendix
+%\input{z-Gibbs-inequality.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -119,4 +119,3 @@
 %\bibliographystyle{acm}
 
 \end{document}
-
