added: z-DiffieHellman-KeyExchange.tex, z-ElGamal.tex

--- a/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
+++ b/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
@@ -100,6 +100,12 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\input{z-DiffieHellman-KeyExchange}
+
+\clearpage
+\input{z-ElGamal}
+
+\clearpage
 \input{z-RSA}
 
 			%%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
