--- a/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
+++ b/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
@@ -29,7 +29,7 @@
 \renewcommand{\Re}{\mathbb{R}}
 
 \renewcommand{\theenumi}{\arabic{enumi}}
-\renewcommand{\labelenumi}{\mbox{}\;\theenumi.$\;$}
+\renewcommand{\labelenumi}{\mbox{}\;(\theenumi)$\;$}
 
 \renewcommand{\theenumii}{\alph{enumii}}
 \renewcommand{\labelenumii}{\mbox{}\;\;\,\theenumii)$\quad$}
@@ -107,6 +107,9 @@
 
 \clearpage
 \input{z-RSA}
+
+\clearpage
+\input{z-DiscreteLog-algorithms}
 
 			%%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
