--- a/cryptography/study-notes/mathematical-cryptography/z-ElGamal.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-ElGamal.tex
@@ -8,41 +8,30 @@
 
 \textbf{Goal:} Bob wants to send Alice an encrypted message via an insecure channel.
 \begin{itemize}
-\item	Alice and Bob choose and publish a large prime $p$ and an integer $g$ with large prime order in $\F_{p}^{*}$.
-\item	Alice chooses a secret $a \in \Z$, computes $A := g^{a} \mod p$, and sends $A \in\F_{p}^{*}$ to Bob
-		via the insecure channel.
-\item	Bob chooses a secret $b \in \Z$, computes $B := g^{b} \mod p$, and sends $B \in\F_{p}^{*}$ to Alice
-		via the insecure channel.
-\item	Bob computes $A^{b} = (g^{a})^{b} = g^{ab} \in \F_{p}^{*}$.
-\item	Alice computes $B^{a} = (g^{b})^{a} = g^{ab} \in \F_{p}^{*}$.
-\item	Alice and Bob have both arrived at $g^{ab} \in \F_{p}^{*}$, which is to be their shared secret.
+\item	Alice chooses and publishes a large prime $p$ and an integer $g$ with large prime order in $\F_{p}^{*}$.
+\item	Alice chooses a secret $a \in \Z$, with $1 \leq a \leq p - 1$, computes $A := g^{a} \mod p$, and
+		publishes $A \in\F_{p}^{*}$ as her public key.
+\item	Bob chooses a plaintext $m \in \F_{p}^{*}$, and a secret random ephemeral key $k \in \Z$, with $1 \leq k \leq p - 1$.
+		Bob computes $B_{1} := g^{k} \mod p$, and $B_{2} := m\cdot A^{k} \in\F_{p}^{*}$.
+		Bob's ciphertext is $(B_{1},B_{2})$ and Bob sends it to Alice via the insecure channel.
+\item	Alice decrypts Bob's ciphertext $(B_{1},B_{2})$ by computing $B_{2}\cdot(B_{1}^{a})^{-1} \in \F_{p}^{*}$.
+		Note that
+		\begin{equation*}
+		B_{2}\cdot(B_{1}^{a})^{-1}
+		\;\; \equiv \;\; (m\cdot A^{k}) \cdot (g^{ak})^{-1}
+		\;\; \equiv \;\; m\cdot (g^{a})^{k} \cdot(g^{ak})^{-1}
+		\;\; \equiv \;\; m\cdot (g^{ak}) \cdot(g^{ak})^{-1}
+		\;\; \equiv \;\; m \mod p
+		\end{equation*}
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Security of the Diffie-Hellman key exchange system}
+\subsection{Security of the ElGamal public key cryptosystem}
 
 \begin{itemize}
-\item	The presumed security of the Diffie-Hellman key exchange system is based on the presumed difficulty in solving the
-		\begin{center}
-		\begin{minipage}{0.80\textwidth}
-		\textbf{The Diffie-Hellman Problem}: \vskip 0.1cm
-		Let $p$ be a prime, and $g\in\F_{p}^{*}$.
-		Given $A,B \in \langle\,g\,\rangle \subset \F_{p}^{*}$, find $g^{ab} \in \F_{p}^{*}$,
-		where $a, b \in \Z$ are determined by $A = g^{a}$ and $B = g^{b}$.
-		\end{minipage}
-		\end{center}
-		Note that the solution of the Diffie-Hellman problem does NOT require the knowledge of $a$ and $b$, but only
-		that of $g^{ab} \in \langle\,g\,\rangle$.
-\item	It is clear that an efficient algorithm for the Discrete Logarithm Problem will lead to an efficient algorithm for
-		the Diffie-Hellman Problem. An efficient algorithm of the Discrete Logarithm Problem will break the
-		Diffie-Hellman key exchange system.
-		\begin{center}
-		\begin{minipage}{0.80\textwidth}
-		\textbf{The Discrete Logarithm Problem}: \vskip 0.1cm
-		Let $p$ be a prime, and $g\in\F_{p}$ be a primitive element, i.e. $\F_{p}^{*} = \langle\,g\,\rangle$.
-		Given any $h \in \F_{p}^{*}$, find $x \in \Z$ such that $h = g^{x}$.
-		\end{minipage}
-		\end{center}
+\item	The ElGamal public key encryption system is at least as secure as the difficulty of Diffie-Hellman problem,
+		in the sense that en ElGamal oracle (efficient solver of the ElGamal cryptosystem problem) can be used
+		to efficiently solve the Diffie-Hellman problem.
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
