--- a/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
+++ b/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
@@ -27,6 +27,7 @@
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
 \renewcommand{\Re}{\mathbb{R}}
+\newcommand{\ord}{\textnormal{ord}}
 
 \renewcommand{\theenumi}{\arabic{enumi}}
 \renewcommand{\labelenumi}{\mbox{}\;(\theenumi)$\;$}
