updated LaTeX mark-up for mathematical cryptography

--- a/cryptography/study-notes/mathematical-cryptography/z-RSA.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-RSA.tex
@@ -145,7 +145,7 @@
 				\end{itemize}
 		\item	\textbf{Key observations:}
 				\begin{itemize}
-				\item[$\bullet$]	If $p-1$ is a product of small primes, then $p \mid N!$, for some not-too-large $N$.  
+				\item[$\bullet$]	If $p-1$ is a product of small primes, then $(p-1) \mid N!$, for some not-too-large $N$.  
 				\item[$\bullet$]	If $(q-1) \nmid N!$, then $q \nmid (a^{N!}-1)$ is ``probably" true.
 				\item[$\bullet$]	If $p-1$ is a product of small primes, and $q-1$ is NOT so, then
 								computing $\gcd(a^{k!}-1,n)$, for $k = 2,3,\ldots$, will ``probably" yield
