update LaTeX for mathematical-cryptography

--- a/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
+++ b/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
@@ -110,6 +110,9 @@
 \input{z-RSA}
 
 \clearpage
+\input{z-smooth-numbers}
+
+\clearpage
 \input{z-DiscreteLog-algorithms}
 
 			%%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
