added: French-Grammar-StudyNotes.tex, conjugation-present.tex

--- a/french/french-grammar/French-Grammar-StudyNotes.tex
+++ b/french/french-grammar/French-Grammar-StudyNotes.tex
@@ -127,8 +127,8 @@
 \pagestyle{fancy}
 
 \rhead[Study Notes]{Kenneth Chu}
-\lhead[Kenneth Chu]{Study Notes}
-\chead[]{{\Large\bf French Grammar} \\
+\lhead[Kenneth Chu]{Notes d'\'etude}
+\chead[]{{\Large\bf Aide-m\'emoire de la Grammaire Fran\c{c}aise} \\
 \vskip 0.1cm \normalsize \today}
 \lfoot[]{}
 \cfoot[]{}
