--- a/french/french-grammar/conjugation-present.tex
+++ b/french/french-grammar/conjugation-present.tex
@@ -1,14 +1,14 @@
 
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
-\section{Regular verb conjugation --- ``Non-compound" tenses}
+\section{La conjugaison des verbes r\'eguliers \`a les temps simples}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
 \newcommand{\stemPresent}{parl}
 \newcommand{\stemFutur}{parler}
 \begin{center}
-\textbf{Regular -er verbs (parler)}
+\textbf{Des verbes en -er (parler)}
 \vskip 0.1cm
 \begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
 \hline
@@ -30,7 +30,7 @@ ils/elles   &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFu
 \renewcommand{\stemFutur}{choisir}
 \renewcommand{\stemPresent}{chois}
 \begin{center}
-\textbf{Regular -ir verbs (choisir)}
+\textbf{Des verbes en -ir (choisir)}
 \vskip 0.1cm
 \begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
 \hline
@@ -53,7 +53,7 @@ ils/elles  &	\stemPresent-issent	&	\stemPresent-iss-aient	&	\stemFutur-aient	&	\
 \renewcommand{\stemPresent}{fin}
 \renewcommand{\stemFutur}{finir}
 \begin{center}
-\textbf{Regular -ir verbs (finir)}
+\textbf{Des verbes en -ir (finir)}
 \vskip 0.1cm
 \begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
 \hline
@@ -75,7 +75,7 @@ ils/elles  &	\stemPresent-iss-ent	&	\stemPresent-iss-aient	&	\stemFutur-aient	&	
 \renewcommand{\stemPresent}{r\'epond}
 \renewcommand{\stemFutur}{r\'epondr}
 \begin{center}
-\textbf{Regular -re verbs (r\'epondre)}
+\textbf{Des verbes en -re (r\'epondre)}
 \vskip 0.1cm
 \begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
 \hline
@@ -96,7 +96,7 @@ ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFut
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
 \clearpage
-\section{Conjugation for ``compound" tenses}
+\section{La conjugaison \`a les temps compos\'es}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
@@ -106,6 +106,7 @@ ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFut
 \begin{tabular}{|c||L{2.5cm}|L{2.5cm}|L{2.5cm}|L{2.5cm}|}
 \hline
 & Pr\'esent & Imparfait & Conditonnel & Futur \\
+\hline
 & \textit{have, am having} & \textit{used to have, was having} & \textit{would have} & \textit{will have} \\
 \hline\hline
 je            &	ai	&	avais	&	aurais	 &	aurai	\\
@@ -188,14 +189,14 @@ $+$ (e)(s)
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
 \clearpage
-\section{La conjugaison des verbes irr\'eguliers courant --- ``Non-compound" tenses}
+\section{La conjugaison des verbes irr\'eguliers courant \`a les temps simples}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
 \renewcommand{\stemPresent}{cour}
 \renewcommand{\stemFutur}{courr}
 \begin{center}
-\textbf{Irregular -ir verbs (courir)}
+\textbf{courir}
 \vskip 0.1cm
 \begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
 \hline
