updated: French-Grammar-StudyNotes.tex

--- a/french/french-grammar/French-Grammar-StudyNotes.tex
+++ b/french/french-grammar/French-Grammar-StudyNotes.tex
@@ -7,6 +7,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage[frenchb]{babel}
+
 % package used to include special header and footer formatting
 \usepackage{fancyhdr}
 
